updating start page

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   overflow: hidden;
-  background: #fff;
+  background: #85a3ba;
 }
 
 .background-image {
